[gd_scene load_steps=4 format=2]

[ext_resource path="res://enemy1.gd" type="Script" id=1]
[ext_resource path="res://jeffrey-epstein-0zm.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16.625, 23.7188 )

[node name="KinematicBody2D" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Jeffrey-epstein-0Zm" type="Sprite" parent="."]
position = Vector2( 0.398439, -16.2109 )
scale = Vector2( 0.0463084, 0.0467844 )
texture = ExtResource( 2 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2( 0, -15.7188 )
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -16 )
shape = SubResource( 1 )

[node name="raytracing1" type="RayCast2D" parent="."]
position = Vector2( -16, -16 )
enabled = true
cast_to = Vector2( -1, 0 )

[node name="raytracing2" type="RayCast2D" parent="."]
position = Vector2( 17, -16 )
enabled = true
cast_to = Vector2( 1, 0 )

[node name="rayM" type="RayCast2D" parent="."]
position = Vector2( 0, 8 )
enabled = true
cast_to = Vector2( 0, 1 )

[node name="rayR" type="RayCast2D" parent="."]
position = Vector2( 16, 8 )
enabled = true
cast_to = Vector2( 0, 1 )

[node name="rayL" type="RayCast2D" parent="."]
position = Vector2( -16, 8 )
enabled = true
cast_to = Vector2( 0, 1 )

[node name="rayL2" type="RayCast2D" parent="."]
position = Vector2( 0, -40 )
enabled = true
cast_to = Vector2( 0, -6 )

[node name="rayL3" type="RayCast2D" parent="."]
position = Vector2( -8, -40 )
enabled = true
cast_to = Vector2( 0, -6 )

[node name="rayL4" type="RayCast2D" parent="."]
position = Vector2( 8, -40 )
enabled = true
cast_to = Vector2( 0, -6 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
